[RW-1088][RW-1089][RW-1090][risk=no] Skin Attribute, Modifiers, Wizard according to style guide  (#1085)
* RW-1088, RW-1089, RW-1090 skinning to style guide

* modal html messup changes

* RW-1088 use redux action to cancel attributes page

* RW-1088 fix list errors

* RW-1088 convert select to clarity dropdown

* modifiers and attributes styles changes

* RW-1088, RW-1089, RW-1090 style changes for dropdowns

* RW-1088, RW-1089, RW-1090 changes functionality for dropdown and style

* RW-1088, RW-1089, RW-1090 code cleanup

* RW-1088, RW-1089, RW-1090 code lint error fixing

* RW-1088, RW-1089, RW-1090 lint error fixing

* RW-1088, RW-1089, RW-1090 error fixing

* RW-1088, RW-1089, RW-1090 moment js added

* RW-1088, RW-1089, RW-1090 fixed position of results

* RW-1088, RW-1089, RW-1090 PM selected header fixes

* RW-1088, RW-1089, RW-1090 PM modal size fixes

* RW-1088, RW-1089, RW-1090 changes according to review

* [RW-1141][risk=no] Fix missing PERSON_TABLE reference (#1077)

* [RW-1012][risk=low] Fix duplicate user sharing bug (#1083)

* fix workspace user sharing

* [RW-1012][risk=low] fix merge conflict (#1087)

* [RW-1116][RW-1129][risk=no] Fix multi-select fields for demographics (#1089)

* RW-1116 add spinners to select boxes while loading

* RW-1116 add redux actions for demographics criteria

* RW-1116 complete action for demo api call

* RW-1116 cache demographics options in redux state

* RW-1116 remove commented code

* RW-1116 remove unused function

* RW-1088, RW-1089, RW-1090 changes according to Lous review

* RW-1088, RW-1089, RW-1090 changes for modal in small window

* [RW-1122][risk=low] Update create workspace conflict error message (#1088)

* update create workspace conflict error message

* [risk=low] Bump Guava to 26.0 (#1090)

* RW-1088, RW-1089, RW-1090 modal width changes

* [No Ticket][Risk=no] Add all the tests! (#1086)

* [No Ticket][Risk=no] Add all the tests!


--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -1,110 +1,112 @@
 <div class="crit-modal-container" [class.show]="open">
   <div class="crit-modal-content">
+    <div class="container title-margin">
+      <div class="row">
+        <div class="col col-sm-8 padding-zero" [ngClass]="{'col col-lg-12': ctype === criteriaTypes.DEMO}">
+          <div class="title-bar">
+            <div class="btn-group btn-link">
+              <ng-container *ngIf="ctype !== criteriaTypes.DEMO">
 
-    <div class="title-bar">
-      <div class="btn-group btn-link">
-        <div class="title">{{ title }}</div>
-        <ng-container *ngIf="ctype !== criteriaTypes.DEMO">
-          <div class="vbar"></div>
-          <button type="button" class="btn"
-            [class.active]="mode === 'tree'"
-            (click)="mode = 'tree'">
-            Criteria Tree
-          </button>
-          <button type="button" class="btn"
-            *ngIf="ctype !== criteriaTypes.PM"
-            [class.active]="mode === 'modifiers'"
-            (click)="mode = 'modifiers'">
-            Modifiers
-          </button>
-          <!--
-          <button type="button" class="btn"
-            [class.active]="mode === 'summary'"
-            (click)="mode = 'summary'">
-            Summary
-          </button>
-          -->
-        </ng-container>
-      </div>
-      <div *ngIf="ctype === domainType[domainType.DRUG]">
-        <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
-          Explore
-        </a>
-        drugs by brand names outside of All of Us
-      </div>
-      <button
-        (click)="cancel()"
-        class="btn btn-link btn-icon">
-        <clr-icon class="close-button" size="24" shape="close"></clr-icon>
-      </button>
-    </div>
+                <button *ngIf="title !=='Physical Measurements' " type="button" class="btn tab"
+                        [class.active]="mode === 'tree'"
+                        (click)="mode = 'tree'">
+                  {{ title }}
+                </button>
+                <ng-container *ngIf="title ==='Physical Measurements' ">
+                  <button  *ngIf="attributesNode.size === 0"  type="button" class="btn tab"
+                          [class.active]="mode === 'tree'"
+                          (click)="mode = 'tree'">
+                    {{ title }}
+                  </button>
+                  <button  *ngIf="attributesNode.size > 0" type="button" class="btn tab-node"
+                           (click)="mode = 'tree'">
+                   {{attributesNode.get('name')}}
+                  </button>
+                </ng-container>
 
-    <!-- Wrapping the content in an ngIf makes sure that the various forms
-      included in the content are destroyed and recreated each time the modal
-      is opened / closed; i.e. modal state doesn't "leak" from one "instance"
-      to another
-    -->
-    <div class="content" *ngIf="open">
-      <ng-container [ngSwitch]="ctype">
-        <crit-demographics *ngSwitchCase="criteriaTypes.DEMO"
-          (cancel)="cancel()"
-          (finish)="finish()">
-        </crit-demographics>
 
-        <ng-container *ngSwitchDefault>
-          <div id="tree" class="panel" [class.show]="mode === 'tree' || mode === 'modifiers' || mode === 'attributes'">
-            <!-- Tree Page -->
-            <div class="panel-left" [class.show]="mode === 'tree'">
-              <crit-tree [node]="rootNode"></crit-tree>
+                <div *ngIf="ctype !== criteriaTypes.PM" class="vbar"></div>
+                <button type="button" class="btn tab"
+                        *ngIf="ctype !== criteriaTypes.PM"
+                        [class.active]="mode === 'modifiers'"
+                        [disabled]="noSelection"
+                        (click)="mode = 'modifiers'">
+                  Modifiers
+                </button>
+              </ng-container>
             </div>
-            <!-- Modifiers Page -->
-            <div class="panel-left" [class.show]="mode === 'modifiers'">
-              <crit-modifier-page></crit-modifier-page>
+            <div *ngIf="ctype === domainType[domainType.DRUG]">
+              <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
+                Explore
+              </a>
+              drugs by brand names outside of AoU
             </div>
-            <!-- Attributes Page -->
-            <div class="panel-left" [class.show]="mode === 'attributes'">
-              <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
-            </div>
-            <div class="panel-right selected">
-              <h5 class="selection-title">{{ selectionTitle }}</h5>
-              <crit-selection-info
-                *ngFor="let parameter of (selection$ | async); let i = index"
-                [index]="i"
-                [parameter]="parameter">
-              </crit-selection-info>
-            </div>
+            <button *ngIf="attributesNode.size > 0"
+                    (click)="back()"
+                    class="btn btn-link btn-icon">
+              <clr-icon size="24" shape="close"></clr-icon>
+            </button>
+          </div>
+          <div class="content" *ngIf="open">
+            <ng-container [ngSwitch]="ctype">
+              <crit-demographics *ngSwitchCase="criteriaTypes.DEMO"
+                                 (cancel)="cancel()"
+                                 (finish)="finish()">
+              </crit-demographics>
+
+              <ng-container *ngSwitchDefault>
+                <div id="tree" class="panel" [class.show]="mode === 'tree' || mode === 'modifiers' || mode === 'attributes'">
+                  <!-- Tree Page -->
+                  <div class="panel-left" [class.show]="mode === 'tree'">
+                    <crit-tree [node]="rootNode"></crit-tree>
+                  </div>
+                  <!-- Modifiers Page -->
+                  <div class="panel-left" [class.show]="mode === 'modifiers'">
+                    <crit-modifier-page></crit-modifier-page>
+                  </div>
+                  <!-- Attributes Page -->
+                  <div class="panel-left" [class.show]="mode === 'attributes'">
+                    <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
+                  </div>
+                </div>
+              </ng-container>
+            </ng-container>
+          </div>
+        </div>
+
+        <div class="col col-sm-4 padding-zero" *ngIf="ctype !== criteriaTypes.DEMO">
+          <div class="content" *ngIf="open">
+            <ng-container [ngSwitch]="ctype">
+              <ng-container *ngSwitchDefault>
+                <div class="panel-right-container">
+                  <h5 class="selection-title">{{ selectionTitle }}</h5>
+                  <div class="panel-right selected">
+                    <crit-selection-info
+                            *ngFor="let parameter of (selection$ | async); let i = index"
+                            [index]="i"
+                            [parameter]="parameter">
+                    </crit-selection-info>
+                  </div>
+                  <div *ngIf="ctype !== criteriaTypes.DEMO" class="footer">
+                    <button type="button"
+                            (click)="cancel()"
+                            class="btn btn-link">
+                      Cancel
+                    </button>
+                    <button type="button"
+                            [disabled]="noSelection"
+                            (click)="finish()"
+                            class="btn btn-primary">
+                      Finish
+                    </button>
+                  </div>
+                </div>
+              </ng-container>
+            </ng-container>
           </div>
 
-          <!-- Summary Page
-          <div id="summary" class="panel" [class.show]="mode === 'summary'">
-            Summary
-          </div>
-          -->
-        </ng-container>
-
-      </ng-container>
-    </div>
-
-    <div *ngIf="ctype !== criteriaTypes.DEMO" class="footer">
-      <button type="button"
-        (click)="cancel()"
-        class="btn btn-link">
-        Cancel
-      </button>
-      <button *ngIf="hasNextPage"
-        [disabled]="noSelection"
-        (click)="nextPage()"
-        type="button"
-        class="btn btn-secondary"
-        >
-        Next
-      </button>
-      <button type="button"
-        [disabled]="noSelection"
-        (click)="finish()"
-        class="btn btn-primary">
-        Finish
-      </button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
