--- a/ui/src/app/cohort-search/search-bar/search-bar.component.css
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.css
@@ -27,6 +27,12 @@ input {
     padding: 0;
     min-width: auto;
 }
+
+.no-border{
+    border: none!important;
+    background: none!important;
+}
+
 .dropdown {
     width: 100%;
     margin-top: 0;
