--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -22,8 +22,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
-  height: 80%;
+  width: calc(100vw - calc(26rem + 60px));
   background-color: white;
   border-radius: 4px;
   display: flex;
@@ -32,12 +31,14 @@
 }
 
 .title-bar {
-  box-shadow: 0 0.12rem 0.125rem 0 #d7d7d7;
+  box-shadow: 0 0.12rem 0.125rem 0 #216FB4;
   margin-bottom: 0.5rem;
-  padding: 0.2rem 0.4rem;
+  padding: 0rem 1rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
+  height:59px;
+  margin-top: 0.5rem;
 }
 
 .title {
@@ -51,13 +52,51 @@
   display: inline-block;
   margin: 0 0.75rem;
   box-sizing: border-box;
-  height: 0.75rem;
+  height: 0.99rem;
   width: 1px;
   border: 1px solid #979797;
 }
 
-button.active {
-  color: rgb(0, 74, 112);
+.nav-link.active {
+  -webkit-box-shadow: inset 0 -7px 0 #007cbb;
+}
+
+.nav .nav-link.btn {
+  color: #216FB4!important;
+}
+
+.nav {
+  box-shadow: none!important;
+  -webkit-box-shadow: none!important;
+}
+
+.nav-link {
+  margin-bottom: -4px!important;
+}
+button{
+  font-weight:300!important;
+}
+button.tab.active {
+  color: #216FB4;
+  border-bottom: 7px solid #216FB4;
+  font-size:14px;
+  padding-bottom:1.8rem;
+  font-weight:bold!important;
+}
+
+.tab-node{
+  border-bottom: 7px solid #216FB4;
+  padding-bottom:1.5rem;
+  font-weight:bold!important;
+
+}
+
+.btn-link .btn, .btn.btn-link {
+  font-size: 14px;
+}
+
+.test:target {
+  border-bottom: 5px solid red;
 }
 
 .close-button {
@@ -70,13 +109,12 @@ button.active {
 
 .content {
   flex: 1;
-  padding: 0.2rem 0.4rem;
   overflow: auto;
 }
 
 .footer {
   margin-top: 0.5rem;
-  padding: 0.2rem 0.4rem;
+  padding: 0.45rem 0rem;
   display: flex;
   justify-content: flex-end;
 }
@@ -109,20 +147,50 @@ button.active {
 .panel-left.show {
   display: block;
   animation: fadeEffect 1s;
+  padding-left: 1rem;
+  max-height: 30rem;
+  min-height: 30rem;
+  overflow-y: auto;
+}
+.panel-right-container{
+  width: 100%;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
+  background-color: rgb(241, 242, 242) ;
 }
 
 .panel-right.selected {
-  width: 14rem;
-  min-width: 14rem;
-  border: 2px solid #d7d7d7;
+  width: 95%;
+  border: 2px solid #262262;
   height: 100%;
   border-radius: 5px;
   overflow-y: auto;
   overflow-x: hidden;
+  min-height: 27.5rem;
+  background-color: white;
+}
+
+.title-margin {
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+}
+
+.title-margin .padding-zero{
+ padding-left: 0rem;
+  padding-right: 0rem;
+}
+
+.btn-color{
+  color: #216FB4!important;
+  font-weight:bold!important;
 }
 
 h5.selection-title {
   margin-top: 0;
+  color: #262262;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 @media all and (max-width: 900px) {
