--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -9,7 +9,7 @@
       (click)="select($event)">
     <clr-icon *ngIf="isSelected" shape="check-circle" size="20" class="selection-icon"></clr-icon>
     <clr-icon *ngIf="!isSelected && !node.get('hasAttributes')" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
-    <clr-icon *ngIf="!isSelected && node.get('hasAttributes')" shape="cog" size="20" class="selection-icon"></clr-icon>
+    <clr-icon *ngIf="!isSelected && node.get('hasAttributes')" shape="slider" dir="right" size="20" class="selection-icon-blue is-solid"></clr-icon>
   </button>
 
   <!-- CODE -->
@@ -27,7 +27,7 @@
     [innerHTML]="displayName | safeHtml"></div>
 
   <!-- COUNT -->
-  <div *ngIf="node.get('selectable')" class="count">
+  <div *ngIf="node.get('selectable') && node.get('count') " class="count">
     <span class="text-muted">&#124;</span>
     <span class="badge badge-info">
       <span *ngIf="node.get('group')">~</span>
