RW-1073 modify actions for attributes api call

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-  {{node.get('name','')}}
+  Title
 </div>
 <div *ngIf="negativeAlert" class="alert alert-danger alert-sm">
   <div class="alert-items">
