--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -63,7 +63,7 @@
             </div>
             <!-- Attributes Page -->
             <div class="panel-left" [class.show]="mode === 'attributes'">
-              <crit-attributes-page [node]="attributesNode"></crit-attributes-page>
+              <crit-attributes-page *ngIf="mode === 'attributes'"></crit-attributes-page>
             </div>
             <div class="panel-right selected">
               <h5 class="selection-title">{{ selectionTitle }}</h5>
