[RW-1113][Risk=no] Fix font for sign in button

--- a/ui/src/app/views/login/component.css
+++ b/ui/src/app/views/login/component.css
@@ -15,7 +15,7 @@
 }
 
 .btn.btn-lg.btn-primary {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 500;
   font-style: normal;
