--- a/ui/src/app/views/login/component.html
+++ b/ui/src/app/views/login/component.html
@@ -5,7 +5,7 @@
       <div style="display: flex;">
         <button (click)="signIn()" class="btn btn-lg btn-primary">
           <img class="google-icon" [src]="googleIcon">
-          Sign In with Google
+          <div>Sign In with Google</div>
         </button>
       </div>
       <div style="padding-top: 1rem;">
