RW-1073 move predefined attributes to constants.ts

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -18,8 +18,8 @@
           <div class="dropdown-width">
             <clr-dropdown>
               <button type="button" class="btn btn-outline" clrDropdownTrigger>
-                <span *ngIf="attr.operator === ''">Select Operator</span>
-                <span *ngIf="attr.operator !== ''">{{dropdowns.selected[i]}}</span>
+                <span *ngIf="!attr.operator">Select Operator</span>
+                <span *ngIf="attr.operator">{{dropdowns.selected[i]}}</span>
                 <clr-icon shape="caret down"></clr-icon>
               </button>
               <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
