--- a/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
+++ b/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
@@ -10,7 +10,7 @@
     type="button"
     class="btn btn-icon btn-link"
     (click)="openManager()">
-    <clr-icon shape="cog" class="is-solid" size="24" title="Manage Annotations"></clr-icon>
+    <clr-icon shape="plus-circle" size="24" title="Manage Annotations"></clr-icon>
   </button>
 </div>
 
