--- a/ui/src/app/cohort-review/set-annotation-create/set-annotation-create.component.css
+++ b/ui/src/app/cohort-review/set-annotation-create/set-annotation-create.component.css
@@ -6,3 +6,50 @@ input[type=text]:not([readonly]):focus {
   border-right: none;
   border-left: none;
 }
+
+.annotation-name-input {
+  border: 1px solid #979797!important;
+  border-radius: 5px;
+  width:18rem;
+  padding:0.7rem;
+  font-size:10px;
+  font-weight: bold;
+  color: #9B9B9B;
+}
+
+.annotation-input-container {
+  height: 22vh;
+}
+
+.footer-button {
+  margin-left: 10rem;
+}
+.footer-button .cancel{
+  color:black;
+  font-weight: 500;
+  font-size: 14px;
+}
+.dropdown, .dropdown .dropdown-toggle{
+  text-align: left;
+  width: 9rem;
+  margin-top:.7rem;
+}
+
+.btn-info-outline .btn, .btn-outline .btn, .btn.btn-info-outline, .btn.btn-outline, .btn.btn-outline-info, .btn.btn-outline .btn {
+  border : 1px solid #C3C3C3;
+  color: #4A4A4A;
+}
+
+.dropdown .dropdown-toggle.btn clr-icon[shape^=caret] {
+  color: #C3C3C3;
+}
+
+.dropdown-menu{
+  width: 9rem;
+}
+
+.annotation-data-type {
+  font-size:10px;
+  font-weight: bold;
+  color: #9B9B9B;
+}
