--- a/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.html
+++ b/ui/src/app/cohort-review/set-annotation-modal/set-annotation-modal.component.html
@@ -1,31 +1,22 @@
-<clr-modal
-  [(clrModalOpen)]="open"
-  [clrModalSize]="'lg'">
+<clr-modal class="annotation-modal" [(clrModalOpen)]="open" [clrModalClosable]="false" >
+  <!--[clrModalClosable]="false"-->
   <h3 class="modal-title">
-    {{ modalTitle }}
-    <button
-      *ngIf="mode === 'list'"
-      type="button"
-      class="btn btn-sm"
-      title="Create a new Cohort Annotation Definition"
-      (click)="mode = 'create'">
-      <clr-icon shape="plus"></clr-icon>
-      Create
-    </button>
+    Create a Cohort-wide Annotation
+    <!--{{ modalTitle }}-->
   </h3>
 
   <!-- The modal operates in one of two modes: show a list, or show a create form -->
   <div class="modal-body">
 
     <!-- New set annotation form -->
-    <div *ngIf="mode ==='create'">
+    <!--<div *ngIf="mode ==='create'">-->
       <!-- onFinish is just a sentinal to indicate the form is done -->
       <app-set-annotation-create (onFinish)="mode = 'list'"></app-set-annotation-create>
-    </div>
+    <!--</div>-->
 
     <!-- Show the set annotation list -->
-    <div *ngIf="mode === 'list'">
-      <app-set-annotation-list></app-set-annotation-list>
-    </div>
+    <!--<div *ngIf="mode === 'list'">-->
+      <!--<app-set-annotation-list></app-set-annotation-list>-->
+    <!--</div>-->
   </div>
 </clr-modal>
